The services section is a start

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
       <ul class="navbar-nav mx-auto">
         <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/">ACCUEIL</a></li>
         <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/services">SERVICES</a></li>
-        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/">CONTACTS</a></li>
+        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/contact">CONTACTS</a></li>
       </ul>
     <div class="btn-group">
       <a *ngIf="!authService.isLogged()" class="btn btn-secondary-custom" routerLink="client/registration">Inscription</a>
