--- a/src/app/registration/registration.component.css
+++ b/src/app/registration/registration.component.css
@@ -1,16 +1,9 @@
 .register-container {
-  max-width: 400px;
-  margin: 0 auto;
   padding: 20px;
-  background-color: #f5f5f5;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333;
+h1 {
+  color: var(--dark);
 }
 
 .form-group {
@@ -20,25 +13,11 @@ h2 {
 label {
   display: block;
   margin-bottom: 5px;
-  font-weight: bold;
+  color: darkgray;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="date"],
-select,
-textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-textarea {
-  height: 100px;
-  resize: vertical;
+.form-text {
+  height: 132px;
 }
 
 .error {
@@ -51,12 +30,6 @@ button {
   display: block;
   width: 100%;
   padding: 10px;
-  /*background-color: var(--primary);*/
-  /*color: white;*/
-  /*border: none;*/
-  /*border-radius: 25px;*/
-  /*cursor: pointer;*/
-  /*font-size: 16px;*/
 }
 
 button:disabled {
@@ -64,7 +37,3 @@ button:disabled {
   cursor: not-allowed;
   border-color: var(--light);
 }
-
-/*button:hover:not(:disabled) {*/
-/*  background-color: var(--dark);*/
-/*}*/
