--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,7 +13,7 @@
           <li><a routerLink="/" class="text-dark text-decoration-none">Accueil</a></li>
           <li><a routerLink="/services" class="text-dark text-decoration-none">Nos Services</a></li>
           <li><a routerLink="/client/profile" class="text-dark text-decoration-none">Mon Compte</a></li>
-          <li><a routerLink="/contact" class="text-dark text-decoration-none">Contact</a></li>
+          <li><a routerLink="/contact" class="text-dark text-decoration-none">Contacts</a></li>
         </ul>
       </div>
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
