--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="container-fluid px-4">
   <div class="row">
-  <div class="col-md-8">
+<!--    ШИРИНА ЛЕВОЙ СЕКЦИИ-->
+  <div class="col-12 col-lg-8 order-1 order-lg-1">
 <!--    NAVBAR START    -->
     <div class="row navbar-services sticky-top">
-      <div class="container">
-        <ul class="nav nav-pills mb-2" id="pills-tab" role="tablist">
+      <div class="w-100">
+        <ul class="nav nav-pills mb-2 justify-content-between" id="pills-tab" role="tablist">
           @for (service of services$ | async; track service.id) {
             <li class="nav-item">
               <button class="nav-link px-3"
@@ -40,12 +41,35 @@
 <!--    LIST OF CATEGORIES START-->
     @if (categoriesWithSubcategories$ | async; as categories) {
       @for (category of categories; track category.id) {
-        <h3 class="text-primary-custom">{{ category.name }}</h3>
-
+        <h3 class="text-primary-custom mt-3">{{ category.name }}</h3>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mb-3">
           @for (subcategory of category.subcategories; track subcategory.id) {
-            <p>{{ subcategory.name }}</p>
+            <div class="col">
+              <div class="card h-100">
+                <img src="assets/images/placeholder-happiness.webp" class="card-img-top d-none d-sm-block" alt="{{subcategory.name}}">
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">{{subcategory.name}}</h5>
+                  <div class="flex-grow-1">
+                    <div class="form-check form-switch mb-2">
+                      <input class="form-check-input" type="checkbox" id="repassage-{{subcategory.id}}">
+                      <label class="form-check-label" for="repassage-{{subcategory.id}}">Repassage</label>
+                    </div>
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" type="checkbox" id="parfumage-{{subcategory.id}}">
+                      <label class="form-check-label" for="parfumage-{{subcategory.id}}">Parfumage</label>
+                    </div>
+                  </div>
+                  <div class="mt-auto">
+                    <div class="d-flex justify-content-between align-items-center">
+                      <span class="fw-bold fs-5">{{subcategory.price_coefficient}} €</span>
+                      <button class="btn btn-secondary-custom">+</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           }
-
+        </div>
       }
     } @else {
       <p class="placeholder-glow">
@@ -53,16 +77,17 @@
       </p>
     }
 
-
-
 <!--    LIST OF CATEGORIES END-->
   </div>
+
 <!--    CART START-->
-  <div class="col-md-4 div-cart vh-100 bg-primary-custom rounded-3 mb-3">
-    <div class="row sticky-top">
-      <h2>Je suis panier</h2>
+    <div class="col-12 col-lg-4 order-3 order-lg-2 mt-3 mt-lg-0">
+  <div class="div-cart rounded-3 mb-3 sticky-top">
+    <div class="row p-1">
+      <h2 class="text-dark">Je suis panier</h2>
     </div>
   </div>
+    </div>
     <!--    CART END-->
   </div>
 </div>
