--- a/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee-dashboard/employee-dashboard.component.html
@@ -1,1 +1,77 @@
-<p>employee-dashboard works!</p>
+<!--<pre>{{ employee$ | async | json}}</pre>-->
+<div class="container-fluid p-4 bg-light">
+  <div class="row d-flex justify-content-center">
+    <div class="col-11">
+      <div class="card rounded-4 shadow-lg py-3">
+@if (employee$ | async; as employee) {
+ <h2 class="text-center p-1">Bonjour {{employee.name}}</h2>
+  <h3 class="text-center"></h3>
+} @else {
+  <p class="card-text placeholder-glow p-3">
+    <span class="placeholder col-7"></span>
+    <span class="placeholder col-6"></span>
+  </p>
+}
+        <div class="row">
+        <h4 class="px-5">Commandes à traiter</h4>
+<!--          <pre>{{ activeOrders$ | async | json}}</pre>-->
+        </div>
+        @if (activeOrders$ | async; as orders) {
+        <div class="container-fluid mt-3">
+          <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 g-4">
+            @for (order of orders; track $index) {
+            <div class="col">
+              <div class="card h-100 shadow rounded-4 p-2 pb-3">
+                <div class="card-body">
+                  <h5 class="card-title">Commande #{{ order.id }} <span *ngIf="order.express" class="badge bg-primary-custom">EXPRESS</span></h5>
+                  <p class="card-text">Date de création : {{ order.created | date:'dd/MM/yyyy HH:mm' }}</p>
+                  <h6 class="card-subtitle mb-1 text-muted fw-bold">Articles :</h6>
+                  <ul class="list-group list-group-flush mb-1">
+                    @for (item of order.items; track $index) {
+                    <li class="list-group-item">
+                      {{ item.subcategory.name }}<br>
+                      {{ item.service.name }}
+                      <span *ngIf="item.ironing" class="badge bg-secondary-custom ms-1"><svg height="20px" width="20px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#5857D8"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .st0{fill:#000000;} </style> <g> <path class="st0" d="M489.016,100.635c-14.127-14.159-33.857-22.984-55.461-22.968H230.714v36.421h202.841 c11.667,0.015,22.048,4.674,29.714,12.309c7.636,7.659,12.302,18.048,12.302,29.714v49.047h-264.62 c-58.19-0.015-111.047,23.636-149.158,61.794C23.635,305.064-0.016,357.92,0,416.12v18.214h512V156.111 C512.016,134.5,503.19,114.778,489.016,100.635z M475.572,397.904H37.365c4.238-40.944,22.604-77.595,50.175-105.198 c31.65-31.611,75.158-51.112,123.412-51.119h264.62V397.904z"></path> </g> </g></svg></span>
+                      <span *ngIf="item.perfuming" class="badge bg-secondary-custom ms-1"><svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20px" height="20px" viewBox="0 0 329.303 329.303" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g id="Artwork_73_"> <g id="Layer_5_73_"> <g> <path d="M59.425,50.565l17.333,9.878c1.329,0.757,2.774,1.117,4.201,1.117c2.954,0,5.825-1.543,7.393-4.293 c2.324-4.079,0.902-9.27-3.176-11.594l-17.333-9.878c-4.081-2.324-9.27-0.902-11.594,3.176 C53.925,43.05,55.347,48.241,59.425,50.565z"></path> <path d="M63.642,98.1c1.427,0,2.873-0.359,4.201-1.116l17.333-9.879c4.078-2.324,5.5-7.516,3.176-11.594 c-2.324-4.078-7.517-5.5-11.594-3.176l-17.333,9.879c-4.078,2.324-5.5,7.516-3.176,11.594 C57.817,96.558,60.688,98.1,63.642,98.1z"></path> <path d="M300.333,17.262C287.857,5.969,269.634,0,247.63,0c-26.842,0-52.943,14.857-66.113,23.715 c-2.391,1.608-17.85,12.203-26.804,23.014c-0.369,0.445-0.541,0.701-1.103,0.748c-0.55,0.046-0.799-0.151-1.24-0.51 c-6.628-5.365-17.285-8.849-29.313-8.849c-20.104,0-19.289,9.727-19.289,21.724c0,11.574-0.745,21.027,17.253,21.681 c0.292,0.01,0.89,0.058,0.89,1.475l-0.148,13.191c0,0-0.028,1.378-1.528,1.378c-2.165,0-8.661,0-8.661,0c-3.3,0-6,2.7-6,6 v14.098c0,0-0.098,1.229-0.433,1.646c-0.518,0.645-1.18,0.855-1.981,1.05c-52.919,12.791-92.23,60.45-92.23,117.297 c0,35.982,28.317,91.645,58.786,91.645c43.55,0,82.616,0,123.465,0c33.847,0,59.112-55.283,59.112-91.645 c0-54.424-36.029-100.426-85.535-115.474c-0.374-0.114-0.648-0.201-0.914-0.639c-0.179-0.295-0.212-1.078-0.212-1.078v-16.899 c0-3.3-2.699-6-6-6c0,0-6.485,0-8.648,0c-1.25,0-1.549-1.757-1.549-1.757l-0.368-18.899c0-1.913,0.941-2.465,1.39-2.771 c0.607-0.413,1.189-0.84,1.742-1.279c0.365-0.29,0.649-0.279,1.098-0.207c0.391,0.063,0.756,0.394,1.178,0.927 c8.5,10.766,23.23,20.788,27.117,23.337c12.973,8.502,38.801,22.766,66.037,22.766c22.004,0,40.229-5.969,52.703-17.262 c11.803-10.684,18.041-25.407,18.041-42.579C318.373,42.672,312.136,27.947,300.333,17.262z M162.568,179.557 c17.629,0,32.022,14.539,32.966,32.143c0.531,9.945-2.664,17.482-7.192,24.369c-9.085,13.814-48.192,46.666-56.67,46.666 c-8.298,0-47.761-32.971-56.787-46.666c-4.519-6.854-7.723-14.424-7.192-24.369c0.941-17.602,15.337-32.143,32.966-32.143 c18.124,0,28.678,19.336,30.956,19.336C134.216,198.893,145.222,179.557,162.568,179.557z"></path> </g> </g> </g> </g> </g></svg></span>
+                      <!--                      <p><span *ngIf="item.ironing">Repassage  </span> <span *ngIf="item.perfuming">Parfumage</span></p>-->
+                    </li>
+                    } @empty {
+                      <p class="text-center">Vous n'avez pas de commandes pour le moment. Vous pouvez vous reposer maintenant</p>
+                    }
+                  </ul>
+                  <div class="bg-light p-2 rounded-3">
+                  <p class="card-text">Client : <span class="fw-bold">{{ order.client.name }} {{ order.client.surname }}</span> ({{ order.client.gender?.name}})</p>
+                    <p class="card-text">{{ order.client.email }}</p>
+                    <p class="card-text">{{ order.client.address }}</p>
+                    <p class="card-text">{{ order.client.city?.name }}</p>
+                  </div>
+                </div>
+
+                    <div class="btn-group">
+                      <button *ngFor="let status of orderStatuses"
+                              (click)="onOrderStatusChange(order.id, status.id)"
+                              class="btn btn-sm"
+                              [ngClass]="{
+                                'btn-outline-dark': order.orderStatus.id !== status.id,
+                                'btn-dark': order.orderStatus.id >= status.id,
+                                           }"
+                              [disabled]="order.orderStatus.id >= status.id">
+                        {{status.name}}
+                      </button>
+                    </div>
+
+              </div>
+            </div>
+            }
+          </div>
+        </div>
+        } @else {
+          <p class="card-text placeholder-glow p-3">
+            <span class="placeholder col-7"></span>
+            <span class="placeholder col-6"></span>
+          </p>
+        }
+      </div>
+      </div>
+    </div>
+  </div>
