--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,3 @@
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">-->
-<!--  <div class="container">-->
-<!--    <div class="collapse navbar-collapse" id="navbarNav">-->
-<!--      <ul class="navbar-nav ms-auto">-->
-<!--        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/">ACCUEIL</a></li>-->
-<!--        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/services">SERVICES</a></li>-->
-<!--        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/client/profile">PROFILE</a></li>-->
-<!--        <div class="btn-group">-->
-<!--        <li *ngIf="!authService.isLogged()" class="nav-item btn btn-warning"><a class="nav-link text-hb-blue" routerLink="/login">Login</a></li>-->
-<!--        <li *ngIf="!authService.isLogged()" class="nav-item btn btn-info"><a class="nav-link text-hb-blue" routerLink="client/registration">Registration</a></li>-->
-<!--        <li *ngIf="authService.isLogged()" class="nav-item btn btn-outline-warning"><a class="nav-link text-hb-blue" (click)="logout()">Logout</a></li>-->
-<!--        </div>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</nav>-->
-
 <nav class="navbar navbar-dark navbar-expand-md navbar-light custom-navbar fixed-top mx-lg-5 my-lg-1 pe-md-0 ps-md-3">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +15,7 @@
     <div class="btn-group">
       <a *ngIf="!authService.isLogged()" class="btn btn-secondary-custom" routerLink="client/registration">Inscription</a>
       <a *ngIf="!authService.isLogged()" class="btn btn-connexion" routerLink="/login">Connexion</a>
-      <a *ngIf="authService.isLogged()" class="btn btn-secondary-custom" routerLink="client/profile">Mon compte</a>
+      <a *ngIf="authService.isLogged()" class="btn btn-secondary-custom" [routerLink]="authService.getUserProfileRoute()">Mon compte</a>
       <a *ngIf="authService.isLogged()" class="btn btn-connexion d-flex align-items-center justify-content-center" (click)="logout()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
