--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -86,14 +86,14 @@
 <!--    LIST OF CATEGORIES END-->
   </div>
 
-<!--    CART START-->
+    <!-- CART START -->
     <div class="col-12 col-lg-4 order-3 order-lg-2 mt-3 mt-lg-0">
 
       <div class="div-cart rounded-3 mb-3 sticky-top">
         <div class="row p-1">
           <h2 class="text-dark text-center">Votre commande</h2>
           <div *ngIf="cart.length === 0" class="text-center">
-            Votre commande est vide.
+            Votre panier est vide.
           </div>
           <div *ngIf="cart.length > 0">
             <ul class="list-group">
@@ -102,24 +102,26 @@
                 <div class="d-flex justify-content-between align-items-start">
                   <!-- Left Side: Wrappable Text -->
                   <div>
-                    {{ item.subcategory.name }} - {{ servicesMap[item.serviceId].name }}
+                    {{ item.subcategory.name }} - {{ servicesMap[item.serviceId]?.name }}
                   </div>
                   <!-- Right Side: Icons, Quantity, and Delete Button -->
                   <div class="d-flex align-items-center ms-auto">
                     <!-- Icons -->
                     <ng-container *ngIf="item.ironing || item.perfuming">
-        <span *ngIf="item.ironing" class="badge bg-light me-1">
-          <svg height="20" width="20" viewBox="0 0 512 512" fill="#000000" xmlns="http://www.w3.org/2000/svg"><path d="M489.016,100.635c-14.127-14.159-33.857-22.984-55.461-22.968H230.714v36.421h202.841c11.667,0.015,22.048,4.674,29.714,12.309c7.636,7.659,12.302,18.048,12.302,29.714v49.047h-264.62c-58.19-0.015-111.047,23.636-149.158,61.794C23.635,305.064-0.016,357.92,0,416.12v18.214h512V156.111C512.016,134.5,503.19,114.778,489.016,100.635z M475.572,397.904H37.365c4.238-40.944,22.604-77.595,50.175-105.198c31.65-31.611,75.158-51.112,123.412-51.119h264.62V397.904z"></path></svg>
-        </span>
-        <span *ngIf="item.perfuming" class="badge bg-light me-1">
-          <svg fill="#000000" width="20" height="20" viewBox="0 0 329.303 329.303" xmlns="http://www.w3.org/2000/svg"><path d="M59.425,50.565l17.333,9.878c1.329,0.757,2.774,1.117,4.201,1.117c2.954,0,5.825-1.543,7.393-4.293c2.324-4.079,0.902-9.27-3.176-11.594l-17.333-9.878c-4.081-2.324-9.27-0.902-11.594,3.176C53.925,43.05,55.347,48.241,59.425,50.565z M63.642,98.1c1.427,0,2.873-0.359,4.201-1.116l17.333-9.879c4.078-2.324,5.5-7.516,3.176-11.594c-2.324-4.078-7.517-5.5-11.594-3.176l-17.333,9.879c-4.078,2.324-5.5,7.516-3.176,11.594C57.817,96.558,60.688,98.1,63.642,98.1z M300.333,17.262C287.857,5.969,269.634,0,247.63,0c-26.842,0-52.943,14.857-66.113,23.715c-2.391,1.608-17.85,12.203-26.804,23.014c-0.369,0.445-0.541,0.701-1.103,0.748c-0.55,0.046-0.799-0.151-1.24-0.51c-6.628-5.365-17.285-8.849-29.313-8.849c-20.104,0-19.289,9.727-19.289,21.724c0,11.574-0.745,21.027,17.253,21.681c0.292,0.01,0.89,0.058,0.89,1.475l-0.148,13.191c0,0-0.028,1.378-1.528,1.378c-2.165,0-8.661,0-8.661,0c-3.3,0-6,2.7-6,6v14.098c0,0-0.098,1.229-0.433,1.646c-0.518,0.645-1.18,0.855-1.981,1.05c-52.919,12.791-92.23,60.45-92.23,117.297c0,35.982,28.317,91.645,58.786,91.645c43.55,0,82.616,0,123.465,0c33.847,0,59.112-55.283,59.112-91.645c0-54.424-36.029-100.426-85.535-115.474c-0.374-0.114-0.648-0.201-0.914-0.639c-0.179-0.295-0.212-1.078-0.212-1.078v-16.899c0-3.3-2.699-6-6-6c0,0-6.485,0-8.648,0c-1.25,0-1.549-1.757-1.549-1.757l-0.368-18.899c0-1.913,0.941-2.465,1.39-2.771c0.607-0.413,1.189-0.84,1.742-1.279c0.365-0.29,0.649-0.279,1.098-0.207c0.391,0.063,0.756,0.394,1.178,0.927c8.5,10.766,23.23,20.788,27.117,23.337c12.973,8.502,38.801,22.766,66.037,22.766c22.004,0,40.229-5.969,52.703-17.262c11.803-10.684,18.041-25.407,18.041-42.579C318.373,42.672,312.136,27.947,300.333,17.262z M162.568,179.557c17.629,0,32.022,14.539,32.966,32.143c0.531,9.945-2.664,17.482-7.192,24.369c-9.085,13.814-48.192,46.666-56.67,46.666c-8.298,0-47.761-32.971-56.787-46.666c-4.519-6.854-7.723-14.424-7.192-24.369c0.941-17.602,15.337-32.143,32.966-32.143c18.124,0,28.678,19.336,30.956,19.336C134.216,198.893,145.222,179.557,162.568,179.557z"/></svg>
-        </span>
+                    <span *ngIf="item.ironing" class="badge bg-light me-1">
+                      <!-- Ironing SVG Icon -->
+                      <svg height="20" width="20" viewBox="0 0 512 512" fill="#000000" xmlns="http://www.w3.org/2000/svg"><path d="M489.016,100.635c-14.127-14.159-33.857-22.984-55.461-22.968H230.714v36.421h202.841c11.667,0.015,22.048,4.674,29.714,12.309c7.636,7.659,12.302,18.048,12.302,29.714v49.047h-264.62c-58.19-0.015-111.047,23.636-149.158,61.794C23.635,305.064-0.016,357.92,0,416.12v18.214h512V156.111C512.016,134.5,503.19,114.778,489.016,100.635z M475.572,397.904H37.365c4.238-40.944,22.604-77.595,50.175-105.198c31.65-31.611,75.158-51.112,123.412-51.119h264.62V397.904z"></path></svg>
+                    </span>
+                      <span *ngIf="item.perfuming" class="badge bg-light me-1">
+                      <!-- Perfuming SVG Icon -->
+                      <svg fill="#000000" width="20" height="20" viewBox="0 0 329.303 329.303" xmlns="http://www.w3.org/2000/svg"><path d="M59.425,50.565l17.333,9.878c1.329,0.757,2.774,1.117,4.201,1.117c2.954,0,5.825-1.543,7.393-4.293c2.324-4.079,0.902-9.27-3.176-11.594l-17.333-9.878c-4.081-2.324-9.27-0.902-11.594,3.176C53.925,43.05,55.347,48.241,59.425,50.565z M63.642,98.1c1.427,0,2.873-0.359,4.201-1.116l17.333-9.879c4.078-2.324,5.5-7.516,3.176-11.594c-2.324-4.078-7.517-5.5-11.594-3.176l-17.333,9.879c-4.078,2.324-5.5,7.516-3.176,11.594C57.817,96.558,60.688,98.1,63.642,98.1z M300.333,17.262C287.857,5.969,269.634,0,247.63,0c-26.842,0-52.943,14.857-66.113,23.715c-2.391,1.608-17.85,12.203-26.804,23.014c-0.369,0.445-0.541,0.701-1.103,0.748c-0.55,0.046-0.799-0.151-1.24-0.51c-6.628-5.365-17.285-8.849-29.313-8.849c-20.104,0-19.289,9.727-19.289,21.724c0,11.574-0.745,21.027,17.253,21.681c0.292,0.01,0.89,0.058,0.89,1.475l-0.148,13.191c0,0-0.028,1.378-1.528,1.378c-2.165,0-8.661,0-8.661,0c-3.3,0-6,2.7-6,6v14.098c0,0-0.098,1.229-0.433,1.646c-0.518,0.645-1.18,0.855-1.981,1.05c-52.919,12.791-92.23,60.45-92.23,117.297c0,35.982,28.317,91.645,58.786,91.645c43.55,0,82.616,0,123.465,0c33.847,0,59.112-55.283,59.112-91.645c0-54.424-36.029-100.426-85.535-115.474c-0.374-0.114-0.648-0.201-0.914-0.639c-0.179-0.295-0.212-1.078-0.212-1.078v-16.899c0-3.3-2.699-6-6-6c0,0-6.485,0-8.648,0c-1.25,0-1.549-1.757-1.549-1.757l-0.368-18.899c0-1.913,0.941-2.465,1.39-2.771c0.607-0.413,1.189-0.84,1.742-1.279c0.365-0.29,0.649-0.279,1.098-0.207c0.391,0.063,0.756,0.394,1.178,0.927c8.5,10.766,23.23,20.788,27.117,23.337c12.973,8.502,38.801,22.766,66.037,22.766c22.004,0,40.229-5.969,52.703-17.262c11.803-10.684,18.041-25.407,18.041-42.579C318.373,42.672,312.136,27.947,300.333,17.262z M162.568,179.557c17.629,0,32.022,14.539,32.966,32.143c0.531,9.945-2.664,17.482-7.192,24.369c-9.085,13.814-48.192,46.666-56.67,46.666c-8.298,0-47.761-32.971-56.787-46.666c-4.519-6.854-7.723-14.424-7.192-24.369c0.941-17.602,15.337-32.143,32.966-32.143c18.124,0,28.678,19.336,30.956,19.336C134.216,198.893,145.222,179.557,162.568,179.557z"/></svg>
+                    </span>
                     </ng-container>
 
                     <!-- Quantity and Price -->
                     <span class="ms-2">
-        *{{ item.quantity }} = {{ calculateItemPrice(item) | currency:'EUR' }}
-      </span>
+                    x{{ item.quantity }} = {{ calculateItemPrice(item) | currency:'EUR' }}
+                  </span>
                     <!-- Delete Button -->
                     <button class="btn btn-sm btn-outline-danger ms-2" (click)="removeFromCart(item)" aria-label="Delete Item">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -144,7 +146,12 @@
               </div>
 
               <div class="text-center mb-2">
-                <button class="btn btn-primary-custom" (click)="placeOrder()">Commander</button>
+                <button class="btn btn-primary-custom"
+                        (click)="placeOrder()"
+                        [disabled]="isPlacingOrder || cart.length === 0">
+                  <span *ngIf="isPlacingOrder" class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>
+                  Commander
+                </button>
               </div>
             </div>
 
@@ -152,7 +159,15 @@
         </div>
       </div>
 
+      <!-- Include the Confirmation Modal Component -->
+      <app-confirmation-modal
+        #confirmationModal
+        [address]="customerAddress"
+        (confirm)="onAddressConfirmed()"
+        (modify)="onAddressModify()">
+      </app-confirmation-modal>
+
     </div>
-    <!--    CART END-->
+    <!-- CART END -->
   </div>
 </div>
