Adjustment of the order price update function to take into account possible changes in coefficients in the future.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,3 +12,4 @@
       <button class="btn btn-primary-custom my-3 px-3">Login</button>
   </div>
 </form>
+<div class="text-center mb-3">Pas de compte ? <a class="nav-link" routerLink="/client/registration">S'inscrire ici</a></div>
