--- a/src/styles.css
+++ b/src/styles.css
@@ -85,3 +85,8 @@ body {
 .alert-primary-custom .alert-link {
   color: var(--primary);
 }
+
+.bg-blur {
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
